--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@mempool/mempool.js": "^2.3.0",
-    "@noble/hashes": "^1.4.0",
+    "@noble/hashes": "^1.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -24,7 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query": "^5.56.2",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.2",
     "bitcoinjs-lib": "^6.1.6",
@@ -32,49 +32,51 @@
     "bs58check": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
     "ecpair": "^2.1.0",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.417.0",
-    "material-icon-theme": "^5.8.0",
+    "material-icon-theme": "^5.11.1",
     "next": "14.2.5",
-    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-number-format": "^5.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.2",
     "react-wrap-balancer": "^1.1.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tiny-secp256k1": "^2.2.3",
     "uint8array-tools": "^0.0.9"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.8",
+    "@content-collections/core": "^0.7.1",
+    "@content-collections/mdx": "^0.1.5",
+    "@content-collections/next": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
     "@types/mdast": "^4.0.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "mdast": "^3.0.0",
     "mdast-util-toc": "^7.1.0",
-    "postcss": "^8",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-packagejson": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "postcss": "^8.4.47",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "shiki": "^1.14.1",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5",
+    "shiki": "^1.20.0",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
     "unist-builder": "^4.0.0",
     "unist-util-find-after": "^5.0.0",
     "unist-util-find-between-all": "^1.0.5",
