--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mempool/mempool.js": "^2.3.0",
     "@noble/hashes": "^1.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
