--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docunicorn",
+  "name": "bitcoin-ninja",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.56.2",
+    "@vercel/analytics": "^1.3.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
