--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -39,6 +40,7 @@
     "dayjs": "^1.11.13",
     "ecpair": "^2.1.0",
     "framer-motion": "^11.9.0",
+    "function-plot": "^1.25.0",
     "lucide-react": "^0.417.0",
     "material-icon-theme": "^5.11.1",
     "next": "14.2.5",
