--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ecpair": "^2.1.0",
     "framer-motion": "^11.9.0",
     "function-plot": "^1.25.0",
+    "katex": "^0.16.11",
     "lucide-react": "^0.417.0",
     "material-icon-theme": "^5.11.1",
     "next": "14.2.5",
@@ -62,6 +63,7 @@
     "@content-collections/mdx": "^0.1.5",
     "@content-collections/next": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/katex": "^0.16.7",
     "@types/mdast": "^4.0.4",
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.10",
