--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.56.2",
     "@vercel/analytics": "^1.3.1",
+    "@xyflow/react": "^12.3.4",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
